[tool.poetry]
name = "tubebridge"
version = "0.0.1"
description = ""
authors = ["SolidSnakeF141 <ignat_kandaurov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sphinx = "^8.0.2"
pytest = "^8.3.2"
aiogram = "^3.12.0"
allure-pytest = "^2.13.5"
sqlalchemy = "^2.0.32"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
